--- a/Portfolio2/work.html
+++ b/Portfolio2/work.html
@@ -24,12 +24,13 @@
             </nav>
         </div>
     </div>
-    <div id="name">
+    <div id="work">
         <div class="container">
-            <p>Art by</p>
-            <h1>Khushbu Choudhary</h1>
+            <h1>Selected Work</h1>
+            <div class="maindiv">
+                
+            </div>
         </div>
-
     </div>
     <div id="footer">
         <div class="conatiner">
