--- a/Portfolio2/contact.html
+++ b/Portfolio2/contact.html
@@ -26,20 +26,9 @@
     </div>
     <div id="contact">
         <div class="container">
-            <div class="row">
-                <div class="contact-left">
-                    <h1 class="subtitle">Contact Me</h1>
-                    <p><i class="fa-solid fa-paper-plane"></i> emailid@email.com</p>
-                    <p><i class="fa-sharp fa-solid fa-phone"></i> 9777664444</p>
-                    <div class="social-icon">
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-
-                    </div>
-
-                </div>
-                <div class="contact-right">
+            <div class="contact">
+                <h1>Contact</h1>
+                <div class="main">
                     <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="email" name="Email" placeholder="Your Email" required>
